# images-gl

./: .eslintrc.js  .gitignore  .prettierignore  COMMIT_GUIDE.md  README.md  commitlint.config.cjs  eslint.config.js  package-lock.json  package.json  vite.config.ts
.cargo/: config.toml
.husky/: pre-commit
docs/: COMMIT_GUIDE.md  extensions.md  image.md
scripts/: COMMANDS.md  README.md  dev.sh  exr-to-png.js
src/: App.vue  main.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/src/: lib.rs  main.rs
src-tauri/src/render/: why.md
src-tauri/src/render/image/: cache.rs  chunk_processing.rs  commands.rs  config.rs  index copy.rs  index.old.rs  index.rs  mod.rs  png.md  preprocessing.rs  readme.md  types.rs  utils.rs
src-tauri/src/utils/: time.rs
src/render/: webgl-manager.ts
src/render/image/: chunk-manager.ts  index-chunk.ts  index.ts
src/render/image/worker/: image-worker.d.ts  image-worker.ts
src/scripts/: README.md  png-optimized.cjs  png-simple-test.cjs
src/utils/: webgl.ts
src/view/: Image.vue  image.ts  utils.ts
src/view/image/: Image.vue  ImageChunk.vue  image.css  png.md
