[package]
name = "images-gl"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "images_gl_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = "0.24"
rayon = "1.8"
memmap2 = "0.9"

[profile.dev]
# 启用增量编译
incremental = true
# 优化级别，保持为 0 以加快编译速度
opt-level = 0
# 启用调试信息
debug = true
# 减少代码生成单元数量，提高增量编译效率
codegen-units = 1

[profile.release]
# 发布版本也启用增量编译
incremental = true
# 优化级别
opt-level = 3
# 启用链接时优化
lto = "thin"
# 减少代码生成单元数量
codegen-units = 1

